Update CSS and fix whitespace

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,22 +1,20 @@
 div#eight-ball {
-	display: block;
-	height: 332px;
-	width: 332px;
 	background: url(/images/magic-eight-ball.jpg) no-repeat center center;
-	position: absolute;
-	top: 50%;
+	height: 332px;
 	left: 50%;
 	margin: -166px 0 0 -166px;
+	position: absolute;
+	top: 50%;
+	width: 332px;
 }
 
 div#eight-ball h1 {
-  font: normal 14px/18px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  text-align: center;
   color: #eee;
-  margin: 0 auto;
-  width: 120px;
-  position: absolute;
-  top: 50%;
+  font: normal 14px/18px 'Helvetica Neue', Helvetica, Arial, sans-serif;
   left: 50%;
   margin: -1em 0 0 -60px;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 120px;
 }
